syntax = "proto3";

package MC.Data;

service MCData{
    rpc GetUserPassword(MCDataUserRequest) returns (MCDataUserResponse) {}
    rpc TryRegist(MCDataRegistRequest) returns(MCDataRegistResponse) {}
}

enum MCDataResponseStatusCode {
    OK = 0;
    FAILED = 1;
    ERROR = 2;
    DATABASE_ERROR = 3;
}

message MCDataUserRequest{
    string username = 1;
}

message MCDataUserResponse{
    MCDataResponseStatusCode code = 1;
    string password = 2;
    string hxm = 3;
    string errmsg = 4;

     // 用户信息
     string nickname = 5;
     bool gender = 6; // TRUE for girl && FALSE for boy
     string signature = 7;
     string email = 8;
     string phone = 9;
     string birthday = 10;
}

message MCDataRegistRequest{
    string username = 1;
    string password = 2;
    string nickname = 3;
    string email = 4;
}

message MCDataRegistResponse{
    MCDataResponseStatusCode code = 1;
    string errmsg = 2;
}